--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "framer-motion": "^11.11.9",
     "icons": "^1.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
